Cascading Change Log

2.2.0 [unreleased]

  Updated c.o.Identity and c.p.a.Coerce to uses field type information during coercion.

  Added c.t.t.CoercibleType interface to allow for customization of individual field data types and formats. Also
  added the c.t.t.DateType implementation for managing string formatted dates to and from a long timestamp.

  Updated c.p.Splice to fail during planning if grouping or merging fields do not share the same field types, unless
  the field in question has a j.u.Comparator to handle the incompatible comparisons.

  Fixed issue where a c.p.CoGroup join on Fields.NONE would fail during planning.

  Updated c.p.a.Unique to optionally filter out null values.

  Added c.o.e.ScriptFunction and c.o.e.ScriptFilter operations to allow for more expressive Java scripts.

  Added "platform.includes" system property so tests can be limited to specified platforms.

  Added c.p.a.MaxBy and c.p.a.MinBy c.p.a.AggregateBy sub-classes to perform max and min, respectively. If the given
  result fields declare a type, the result will be coerced to that type.

  Updated c.p.a.SumBy and c.p.a.AverageBy to honor result fields type declaration by coercing the result to the
  declared type.

  Updated c.p.a.CountBy to count all value occurrences, non-null values, or only null values, within a grouping. Using
  grouping Fields.NONE provides an efficient count for a set of columns. Counting distinct values is not supported.

  Updated c.t.Fields to accept type information and to propagate type values along with fields.

  Updated c.s.l.TextDelimited and c.s.h.TextDelimited to take c.s.u.DelimitedParser on the constructor to allow
  for overriding parsing behavior. DelimitedParser now takes a c.s.u.FieldTypeResolver to allow for field name
  permutations during source and sink, and type inference from field names.

2.1.1

  Fixed issue where c.s.h.TextDelimited would not honor charsetName.
