@@ -21,6 +21,7 @@
 package cascading.pipe.assembly;
 
 import java.beans.ConstructorProperties;
+import java.lang.reflect.Type;
 
 import cascading.flow.FlowProcess;
 import cascading.operation.aggregator.Max;
@@ -30,7 +31,8 @@ import cascading.pipe.Pipe;
 import cascading.tuple.Fields;
 import cascading.tuple.Tuple;
 import cascading.tuple.TupleEntry;
-import cascading.tuple.Tuples;
+import cascading.tuple.coerce.Coercions;
+import cascading.tuple.type.CoercibleType;
 
 /**
  * Class MaxBy is used to find the maximum value in a grouping.
@@ -66,7 +68,8 @@ public class MaxBy extends AggregateBy
   public static class MaxPartials implements Functor
     {
     private final Fields declaredFields;
-    private final Class type;
+    private final Type type;
+    private final CoercibleType canonical;
 
     /** Constructor MaxPartials creates a new MaxPartials instance. */
     public MaxPartials( Fields declaredFields )
@@ -76,10 +79,12 @@ public class MaxBy extends AggregateBy
       if( !declaredFields.hasTypes() )
         throw new IllegalArgumentException( "result type must be declared " );
 
-      this.type = declaredFields.getTypeClass( 0 );
+      this.type = declaredFields.getType( 0 );
 
       if( declaredFields.size() != 1 )
         throw new IllegalArgumentException( "declared fields may only have one field, got: " + declaredFields );
+
+      this.canonical = Coercions.coercibleTypeFor( this.type );
       }
 
     public MaxPartials( Fields declaredFields, Class type )
@@ -89,6 +94,8 @@ public class MaxBy extends AggregateBy
 
       if( declaredFields.size() != 1 )
         throw new IllegalArgumentException( "declared fields may only have one field, got: " + declaredFields );
+
+      this.canonical = Coercions.coercibleTypeFor( this.type );
       }
 
     @Override
@@ -113,7 +120,7 @@ public class MaxBy extends AggregateBy
     @Override
     public Tuple complete( FlowProcess flowProcess, Tuple context )
       {
-      context.set( 0, Tuples.coerce( context.getObject( 0 ), type ) );
+      context.set( 0, canonical.canonical( context.getObject( 0 ) ) );
 
       return context;
       }
